--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "static-site",
+  "name": "challenge9",
   "version": "1.0.0",
-  "description": "",
+  "description": "Create README generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hoffnik/challenge-9.git"
+  },
+  "author": "hoffnik",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/hoffnik/challenge-9/issues"
+  },
+  "homepage": "https://github.com/hoffnik/challenge-9#readme"
 }
